Fixing errors on z-index and import images

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -156,7 +156,7 @@ body {
   left: 0;
   right: 0;
   top: 47px;
-  z-index: 100
+  z-index: 11
 }
 
 .inner-carrousel-top > .item > img {
@@ -183,6 +183,14 @@ body {
     }
     #carruseltop {
       display: none;
+    }
+
+    .logo-tagline {
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 47px;
+      z-index: 0
     }
 }
 
@@ -878,7 +886,7 @@ i.fa {
         width: 100%;
     }
     .jumbotron {
-        height: 100vh;
+        height: 87vh;
         margin-top: 50px;
     }
     .servicios-details {
@@ -890,7 +898,7 @@ i.fa {
     .drone-detail-img.img-right-osmo {
     margin: auto;
     margin-top: 25px;
-}
+    }
     .mobile-drone{
         padding-bottom: 35px;
     }
